# trivial_go_repo

./: BUILD.bazel  WORKSPACE
cmd/: BUILD.bazel  main.go
lib/: BUILD.bazel  thing.go
