load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/ianthehat/trivial_go_repo",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ianthehat/trivial_go_repo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "trivial_binary",
    importpath = "github.com/ianthehat/trivial_go_repo",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
