load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ianthehat/trivial_go_repo/cmd",
    visibility = ["//visibility:private"],
    deps = ["//lib:go_default_library"],
)

go_binary(
    name = "cmd",
    importpath = "github.com/ianthehat/trivial_go_repo/cmd",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
